--- a/de/devtools/client/debugger.properties
+++ b/de/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Eingebettete Vorschau anzeigen
 # for hiding the inline preview block
 inlinePreview.hide.label=Eingebettete Vorschau ausblenden
 
+# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.disable.label=Eingebettete Vorschau deaktivieren
+
+# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
+# tooltip that will describe disabling inline preview
+inlinePreview.disable.tooltip=Deaktiviert die eingebettete Vorschau im Debugger-Editor
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Debugger-Einstellungen
 
@@ -696,6 +704,12 @@ settings.disableJavaScript.label=JavaScript deaktivieren
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=JavaScript deaktivieren (erfordert erneutes Laden der Seite)
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
+# tooltip for disabling source maps
+
+# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
+# label for disabling source maps
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
