--- a/ko/dom/chrome/dom/dom.properties
+++ b/ko/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=공유 작업이 실패했습니다.
 WebShareAPI_Aborted=공유 작업이 중단되었습니다.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=알 수 없는 프로토콜로 인해 “%1$S”(으)로의 탐색을 차단했습니다.
+PostMessageSharedMemoryObjectToCrossOriginWarning=공유 메모리 객체가 포함된 메시지를 교차 원본 창에 게시할 수 없습니다.
