--- a/es-AR/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/es-AR/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -3,18 +3,18 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-title = Abriendo %S
-saveDialogTitle = Ingrese nombre de archivo a guardar…
-defaultApp = %S (predeterminada)
-chooseAppFilePickerTitle = Seleccionar aplicación adicional
-badApp = La aplicación elegida ("%S") no puede ser encontrada.  Verifique el nombre o seleccione otra aplicación.
-badApp.title = Aplicación no encontrada
+title=Abriendo %S
+saveDialogTitle=Ingrese nombre de archivo a guardar…
+defaultApp=%S (predeterminada)
+chooseAppFilePickerTitle=Seleccionar aplicación adicional
+badApp=La aplicación elegida ("%S") no puede ser encontrada.  Verifique el nombre o seleccione otra aplicación.
+badApp.title=Aplicación no encontrada
 badPermissions=El archivo no pudo guardarse porque no posee los permisos adecuados.  Elija otro directorio para guardar.
 badPermissions.title=Permisos de guardado inválidos
-selectDownloadDir = Seleccione carpeta de descargas
-unknownAccept.label = Guardar archivo
-unknownCancel.label = Cancelar
+selectDownloadDir=Seleccione carpeta de descargas
+unknownAccept.label=Guardar archivo
+unknownCancel.label=Cancelar
 fileType=archivo %S
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
-
+pdfHandlerDescription=Formato de documento portátil
