--- a/nb-NO/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/nb-NO/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -6,11 +6,14 @@
 # The following are used by the Mailing list dialog
 #
 
-## LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name
+# The following are used by the Mailing list dialog.
+# LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name.
 mailingListTitleEdit=Rediger %S
 emptyListName=Du må skrive inn et listenavn.
 lastFirstFormat=%S, %S
 firstLastFormat=%S %S
+
+allAddressBooks=Alle adressebøker
 
 newContactTitle=Ny kontakt
 # %S will be the card's display name
@@ -44,6 +47,92 @@ confirmDeleteMailingList=Er du sikker på at du vil slette den valgte e-postlist
 confirmDeleteListsAndContacts=Er du sikker på at du vil slette de valgte kontaktene og e-postlistene?
 confirmDeleteMailingLists=Er du sikker på at du vil slette den valgte e-postlisten?
 
+confirmDeleteThisContactTitle=Slett kontakt
+# LOCALIZATION NOTE (confirmDeleteThisContact):
+# #1 The name of the selected contact
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this contact?
+#          • John Doe
+confirmDeleteThisContact=Er du sikker på at du vil slette denne kontakten?\n• #1
+
+confirmDelete2orMoreContactsTitle=Slett flere kontakter
+# LOCALIZATION NOTE (confirmDelete2orMoreContacts):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# Example: Are you sure you want to delete these 3 contacts?
+confirmDelete2orMoreContacts=Vil du slette denne #1 kontakten?;Vil du slette disse #1 kontaktene?
+
+confirmRemoveThisContactTitle=Slett kontakt
+# LOCALIZATION NOTE (confirmRemoveThisContact):
+# #1 The name of the selected contact
+# #2 The name of the containing mailing list
+# This title is about a contact in a mailing list, so it will not be deleted,
+# but only removed from the list.
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to remove this contact from the mailing list 'Customers List'?
+#          • John Doe
+confirmRemoveThisContact=Vil du slette denne kontakten fra e-postlisten «#2»?\n• #1
+
+confirmRemove2orMoreContactsTitle=Fjern flere kontakter
+# LOCALIZATION NOTE (confirmRemove2orMoreContacts):
+# Semicolon list of singular and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# #2 The name of the containing mailing list
+# Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+confirmRemove2orMoreContacts=Vil du slette denne #1 kontakten fra e-postlisten «#2»?;Vil du slette disse #1 kontaktene fra e-postlisten «#2»?
+
+confirmDeleteThisMailingListTitle=Slett e-postliste
+# LOCALIZATION NOTE (confirmDeleteThisMailingList):
+# #1 The name of the selected mailing list
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this mailing list?
+#          • Customers List
+confirmDeleteThisMailingList=Er du sikker på at du ønsker å slette denne e-postlisten?\n• #1
+
+confirmDelete2orMoreMailingListsTitle=Slett flere e-postlister
+# LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 mailing lists?
+confirmDelete2orMoreMailingLists=Vil du slette denne #1 e-postlisten?;Vil du slette disse #1 e-postlistene?
+
+confirmDelete2orMoreContactsAndListsTitle=Slett kontakter og e-postlister
+# LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
+# Semicolon list of and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts and mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 contacts and mailing lists?
+confirmDelete2orMoreContactsAndLists=Vil du slette disse #1 kontaktene og e-postlistene?;Vil du slette disse #1 kontaktene og e-postlistene?
+
+confirmDeleteThisAddressbookTitle=Slett adressebok
+# LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
+# #1 The name of the selected address book
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this address book and all of its contacts?
+#          • Friends and Family Address Book
+confirmDeleteThisAddressbook=Vil du slette denne adresseboken og alle kontaktene?\n• #1
+
+confirmDeleteThisLDAPDirTitle=Slett lokal LDAP-katalog
+# LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
+# #1 The name of the selected LDAP directory
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
+#          • Mozilla LDAP Directory
+confirmDeleteThisLDAPDir=Vil du fjerne den lokale kopien av denne LDAP-katalogen og alle frakoblede kontakter?\n• #1
+
+confirmDeleteThisCollectionAddressbookTitle=Slett oppsamlet adressebok
+# LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
+# #1 The name of the selected collection address book
+# #2 The name of the application (Thunderbird)
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: If this address book is deleted, Thunderbird will no longer collect addresses.
+#          Are you sure you want to delete this address book and all of its contacts?
+#          • My Collecting Addressbook
+confirmDeleteThisCollectionAddressbook=Hvis denne adresseboken blir slettet vil #2 ikke lenger samle inn adresser.\nVil du slette denne adressboken og alle kontaktene?\n• #1
+
 propertyPrimaryEmail=E-post
 propertyListName=Listenavn
 propertySecondaryEmail=E-post (annen)
@@ -60,6 +149,16 @@ propertyCustom1=Selvvalgt 1
 propertyCustom2=Selvvalgt 2
 propertyCustom3=Selvvalgt 3
 propertyCustom4=Selvvalgt 4
+
+propertyGtalk=Google Talk
+propertyAIM=AIM
+propertyYahoo=Yahoo!
+propertySkype=Skype
+propertyQQ=QQ
+propertyMSN=MSN
+propertyICQ=ICQ
+propertyXMPP=Jabber-ID
+propertyIRC=IRC-kallenavn
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
