--- a/en-GB/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/en-GB/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -6,11 +6,14 @@
 # The following are used by the Mailing list dialog
 #
 
-## LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name
+# The following are used by the Mailing list dialog.
+# LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name.
 mailingListTitleEdit=Edit %S
 emptyListName=You must enter a list name.
 lastFirstFormat=%S, %S
 firstLastFormat=%S %S  
+
+allAddressBooks=All Address Books
 
 newContactTitle=New Contact
 # %S will be the card's display name
@@ -44,6 +47,78 @@ confirmDeleteMailingList=Are you sure you want to delete the selected mailing li
 confirmDeleteListsAndContacts=Are you sure you want to delete the selected contacts and mailing lists?
 confirmDeleteMailingLists=Are you sure you want to delete the selected mailing lists?
 
+confirmDeleteThisContactTitle=Delete Contact
+# LOCALIZATION NOTE (confirmDeleteThisContact):
+# #1 The name of the selected contact
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this contact?
+#          • John Doe
+confirmDeleteThisContact=Are you sure you want to delete this contact?\n• #1
+
+confirmDelete2orMoreContactsTitle=Delete Multiple Contacts
+# LOCALIZATION NOTE (confirmDelete2orMoreContacts):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# Example: Are you sure you want to delete these 3 contacts?
+confirmDelete2orMoreContacts=Are you sure you want to delete this #1 contact?;Are you sure you want to delete these #1 contacts?
+
+confirmRemoveThisContactTitle=Remove Contact
+# LOCALIZATION NOTE (confirmRemoveThisContact):
+# #1 The name of the selected contact
+# #2 The name of the containing mailing list
+# This title is about a contact in a mailing list, so it will not be deleted,
+# but only removed from the list.
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to remove this contact from the mailing list 'Customers List'?
+#          • John Doe
+confirmRemoveThisContact=Are you sure you want to remove this contact from the mailing list '#2'?\n• #1
+
+# LOCALIZATION NOTE (confirmRemove2orMoreContacts):
+# Semicolon list of singular and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# #2 The name of the containing mailing list
+# Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+
+# LOCALIZATION NOTE (confirmDeleteThisMailingList):
+# #1 The name of the selected mailing list
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this mailing list?
+#          • Customers List
+
+# LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 mailing lists?
+
+# LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
+# Semicolon list of and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts and mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 contacts and mailing lists?
+
+# LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
+# #1 The name of the selected address book
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this address book and all of its contacts?
+#          • Friends and Family Address Book
+
+# LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
+# #1 The name of the selected LDAP directory
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
+#          • Mozilla LDAP Directory
+
+# LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
+# #1 The name of the selected collection address book
+# #2 The name of the application (Thunderbird)
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: If this address book is deleted, Thunderbird will no longer collect addresses.
+#          Are you sure you want to delete this address book and all of its contacts?
+#          • My Collecting Addressbook
+
 propertyPrimaryEmail=Email
 propertyListName=List Name
 propertySecondaryEmail=Additional Email
@@ -60,6 +135,7 @@ propertyCustom1=Custom 1
 propertyCustom2=Custom 2
 propertyCustom3=Custom 3
 propertyCustom4=Custom 4
+
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -150,9 +226,11 @@ headingPhone=Phone
 headingDescription=Description
 headingAddresses=Addresses
 
-# For address books
+## For address books
 addressBookTitleNew=New Address Book
-## LOCALIZATION NOTE (addressBookTitleEdit): %S will be replaced by the the Address Book's name
+# LOCALIZATION NOTE (addressBookTitleEdit):
+# %S is the current name of the address book.
+# Example: My Custom AB Properties
 addressBookTitleEdit=%S Properties
 duplicateNameTitle=Duplicate Address Book Name
 # LOCALIZATION NOTE (duplicateNameText):
