--- a/en-GB/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/en-GB/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -74,43 +74,56 @@ confirmRemoveThisContactTitle=Remove Contact
 #          • John Doe
 confirmRemoveThisContact=Are you sure you want to remove this contact from the mailing list '#2'?\n• #1
 
+confirmRemove2orMoreContactsTitle=Remove Multiple Contacts
 # LOCALIZATION NOTE (confirmRemove2orMoreContacts):
 # Semicolon list of singular and plural forms.
 # See: http://developer.mozilla.org/docs/Localization_and_Plurals
 # #1 The number of selected contacts, always more than 1.
 # #2 The name of the containing mailing list
 # Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+confirmRemove2orMoreContacts=Are you sure you want to remove this #1 contact from the mailing list '#2'?;Are you sure you want to remove these #1 contacts from the mailing list '#2'?
 
+confirmDeleteThisMailingListTitle=Delete Mailing List
 # LOCALIZATION NOTE (confirmDeleteThisMailingList):
 # #1 The name of the selected mailing list
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete this mailing list?
 #          • Customers List
+confirmDeleteThisMailingList=Are you sure you want to delete this mailing list?\n• #1
 
+confirmDelete2orMoreMailingListsTitle=Delete Multiple Mailing Lists
 # LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
 # Semicolon list of plural forms.
 # See: http://developer.mozilla.org/docs/Localization_and_Plurals
 # #1 The number of selected mailing lists, always more than 1
 # Example: Are you sure you want to delete these 3 mailing lists?
+confirmDelete2orMoreMailingLists=Are you sure you want to delete this #1 mailing list?;Are you sure you want to delete these #1 mailing lists?
 
+confirmDelete2orMoreContactsAndListsTitle=Delete Contacts and Mailing Lists
 # LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
 # Semicolon list of and plural forms.
 # See: http://developer.mozilla.org/docs/Localization_and_Plurals
 # #1 The number of selected contacts and mailing lists, always more than 1
 # Example: Are you sure you want to delete these 3 contacts and mailing lists?
+confirmDelete2orMoreContactsAndLists=Are you sure you want to delete these #1 contacts and mailing lists?;Are you sure you want to delete these #1 contacts and mailing lists?
 
+confirmDeleteThisAddressbookTitle=Delete Address Book
 # LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
 # #1 The name of the selected address book
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete this address book and all of its contacts?
 #          • Friends and Family Address Book
+confirmDeleteThisAddressbook=Are you sure you want to delete this address book and all of its contacts?\n• #1
 
+confirmDeleteThisLDAPDirTitle=Delete Local LDAP Directory
 # LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
 # #1 The name of the selected LDAP directory
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
 #          • Mozilla LDAP Directory
+confirmDeleteThisLDAPDir=Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?\n• #1
 
+confirmDeleteThisCollectionAddressbookTitle=Delete Collection Address Book
 # LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
 # #1 The name of the selected collection address book
 # #2 The name of the application (Thunderbird)
@@ -118,6 +131,7 @@ confirmRemoveThisContact=Are you sure you want to remove this contact from the m
 # Example: If this address book is deleted, Thunderbird will no longer collect addresses.
 #          Are you sure you want to delete this address book and all of its contacts?
 #          • My Collecting Addressbook
+confirmDeleteThisCollectionAddressbook=If this address book is deleted, #2 will no longer collect addresses.\nAre you sure you want to delete this address book and all of its contacts?\n• #1
 
 propertyPrimaryEmail=Email
 propertyListName=List Name
@@ -136,6 +150,15 @@ propertyCustom2=Custom 2
 propertyCustom3=Custom 3
 propertyCustom4=Custom 4
 
+propertyGtalk=Google Talk
+propertyAIM=AIM
+propertyYahoo=Yahoo!
+propertySkype=Skype
+propertyQQ=QQ
+propertyMSN=MSN
+propertyICQ=ICQ
+propertyXMPP=Jabber ID
+propertyIRC=IRC Nick
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -222,6 +245,7 @@ joinMeInThisChat=Join+me+in+this+Chat.
 headingHome=Home
 headingWork=Work
 headingOther=Other
+headingChat=Chat
 headingPhone=Phone
 headingDescription=Description
 headingAddresses=Addresses
