--- a/es-CL/devtools/client/debugger.properties
+++ b/es-CL/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Mostrar vista previa en línea
 # for hiding the inline preview block
 inlinePreview.hide.label=Ocultar vista previa en línea
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Vista previa variable en línea
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Mostrar vista previa en línea en el editor de depurador
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Ajustes del depurador
 
@@ -696,6 +704,14 @@ settings.disableJavaScript.label=Desactivar JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Desactivar JavaScript (requiere refrescar)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Habilita los mapas de origen para permitir que DevTools cargue las fuentes originales además de las generadas
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Mapas de origen
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
