--- a/oc/devtools/client/webconsole.properties
+++ b/oc/devtools/client/webconsole.properties
@@ -570,6 +570,10 @@ webconsole.input.editor.onboarding.label=Desvolopatz vòstre còdi mai rapidamen
 # displayed in the multiline-input mode onboarding UI to dismiss it.
 webconsole.input.editor.onboarding.dissmis.label=Comprés !
 
+# LOCALIZATION NOTE (webconsole.input.editor.onboarding.dismiss.label): the text that is
+# displayed in the multiline-input mode onboarding UI to dismiss it.
+webconsole.input.editor.onboarding.dismiss.label=Comprés !
+
 # LOCALIZATION NOTE (webconsole.enterKey): The text that will be used to represent the
 # Enter key in the editor onboarding UI, as well as on the Editor toolbar "Run" button
 # tooltip.
