--- a/it/dom/chrome/security/security.properties
+++ b/it/dom/chrome/security/security.properties
@@ -57,6 +57,7 @@ UnsupportedHashAlg = Algoritmo di hash non supportato nell’attributo integrity
 NoValidMetadata = L’attributo integrity non contiene alcun metadato valido.
 WeakCipherSuiteWarning = Questo sito utilizza RC4 per la crittografia, un algoritmo deprecato e insicuro.
 DeprecatedTLSVersion = Questo sito utilizza una versione di TLS che verrà disattivata nel marzo 2020. Aggiornare a TLS 1.2 o 1.3.
+DeprecatedTLSVersion2 = Questo sito utilizza una versione deprecata di TLS. Aggiornare a TLS 1.2 o 1.3.
 MimeTypeMismatch2 = La risorsa da “%1$S” è stata bloccata a causa della mancata corrispondenza (“%2$S”) del tipo MIME (X-Content-Type-Options: nosniff).
 XCTOHeaderValueMissing = Avviso header X-Content-Type-Options: il valore rilevato è “%1$S”, si voleva forse utilizzare “nosniff”?
 XTCOWithMIMEValueMissing = La risorsa da “%1$S” non è stata visualizzata a causa del tipo MIME sconosciuto, incorretto o assente (X-Content-Type-Options: nosniff).
